<resources>
    <string name="app_name">享无限</string>
    <string name="login">登录</string>
    <!-- login page -->
    <string name="enter_number">请输入手机号</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="sms_code">验证码</string>
    <string name="enter_true_phone_number">输入的手机号有误</string>
    <string name="unlock">立即解锁</string>
    <string name="enter_code">请输入验证码</string>
    <string name="title_activity_my_devices">MyDevicesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="device_name">设备名称：</string>
    <string name="device_wifi_name">设备WIFI名称：</string>
    <string name="device_wifi_password">设备WIFI密码：</string>
    <string name="device_time">开始计费时间：</string>
    <string name="device_get_wifi">获取wifi</string>
    <string name="return_device">还设备</string>
    <string name="get_pay_num">支付金额</string>
    <string name="need_pay_num">需支付金额：%1$s元</string>
    <string name="light">闪光灯</string>
    <string name="input_by_self">手动输入</string>
    <string name="wifi_info">wifi名称：%1$s, wifi密码：%2$s \n wifi密码复制成功！</string>
    <string name="toPaste">去粘帖</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_devices">我的设备</string>
    <string name="my_order">我的订单</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="login_out">退出登录</string>

    <!-- order page -->
    <string name="order_num">订单号: %1$s</string>
    <string name="rent_place">租借地点</string>
    <string name="rent_money">租借费用</string>
    <string name="renting">租借中</string>
    <string name="wait_to_pay">待支付</string>
    <string name="has_commplete">已完成</string>
    <string name="no_this_type_order">没有此类型订单！</string>
    <string name="toPay">支付</string>

    <!-- myDevice page -->
    <string name="paste">粘帖</string>
    <string name="rent_time">借出时间:</string>
    <string name="rent_place2">租借地点:</string>
    <string name="battery_status">电量:</string>
    <string name="charge_status">充电状态:</string>
    <string name="connect_num">连接数:</string>
    <string name="flow">流量:</string>
    <string name="copy_success">复制成功！</string>
    <string name="no_rent_device">无租用设备！</string>

    <!-- myWallet page-->
    <string name="recharge_balance">充值余额</string>
    <string name="my_deposit">我的押金: </string>
    <string name="unpaid_deposit">未缴纳，点击缴纳押金 ></string>
    <string name="available_balance">可用余额</string>
    <string name="available">￥ 60</string>



</resources>
