<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

        <com.kunulo.share_ifi.view.MyEditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toLeftOf="@+id/tv_get_code"
            android:background="@null"
            android:drawablePadding="10dp"
            android:hint="@string/enter_number"
            android:inputType="number"
            android:textColor="#2D1010"
            android:text="15726816105"
            android:textColorHint="#BBBBBB"
            android:textSize="16dp" />


        <com.kunulo.share_ifi.view.MyTextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:text="@string/get_sms_code"
            android:textColor="#B40028"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/et_number"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="#DADADA" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1">

        <com.kunulo.share_ifi.view.MyEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:drawablePadding="10dp"
            android:text="123456"
            android:hint="@string/sms_code"
            android:inputType="numberPassword"
            android:textColor="#2D1010"
            android:textColorHint="#BBBBBB"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/et_code"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="#DADADA" />
    </RelativeLayout>

    <com.kunulo.share_ifi.view.MyButton
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textSize="21dp" />


</LinearLayout>
